--- a/game/export_presets.cfg
+++ b/game/export_presets.cfg
@@ -21,7 +21,7 @@ custom_package/release=""
 command_line/extra_args=""
 version/code=1
 version/name="1.0"
-package/unique_name="me.felipevlad"
+package/unique_name="me.felipevlad.plantsvsdeforesters"
 package/name="Plants vs Deforesters"
 package/signed=true
 screen/immersive_mode=true
